knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/Collaborative_Practice_Agreement__c.object-meta.xml
<CustomObject>
    <label>Collaborative Practice Agreement</label>
    <nameField>
        <displayFormat>CPA-{00000}</displayFormat>
        <label>Collaborative Practice Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborative Practice Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>