knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Board_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Approval_Date__c</fullName>
    <label>Board Approval Date</label>
    <type>Date</type>
</CustomField>