knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Credentialing_Status__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Status__c</fullName>
    <formula>Text(Physician_Healthcare_Facility__r.Credentialling_Status__c)</formula>
    <label>Credentialing Status</label>
    <type>Text</type>
</CustomField>