knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Inactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactivation_Date__c</fullName>
    <label>Inactivation Date</label>
    <type>Date</type>
</CustomField>