knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Ineligible_Refusal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_Refusal_Reason__c</fullName>
    <label>Ineligible/Refusal Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName># of APPs being supervised</fullName>
            </value>
            <value>
                <fullName>Affiliate medical staff membership category</fullName>
            </value>
            <value>
                <fullName>Comfortable managing the known NP/PAs, but not unknown/new</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest</fullName>
            </value>
            <value>
                <fullName>LOCUM Physician</fullName>
            </value>
            <value>
                <fullName>Mentorship program participant</fullName>
            </value>
            <value>
                <fullName>Not BC w/one year of practice experience</fullName>
            </value>
            <value>
                <fullName>Objects to Telemedicine language in CPA</fullName>
            </value>
            <value>
                <fullName>Out of State Physician</fullName>
            </value>
            <value>
                <fullName>Physician on the roster, but not actively working</fullName>
            </value>
            <value>
                <fullName>Physician works weekends only on a shift that does not work alongside an NP or PA</fullName>
            </value>
            <value>
                <fullName>PRN physician unwilling to supervise due to limited exposure</fullName>
            </value>
            <value>
                <fullName>Requires reimbursement for supervision duties</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Tele-Hospitalist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>