knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/NP_PA_Facility_Title__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Facility_Title__c</fullName>
    <formula>NP_PA_Healthcare_Practitioner_Facility__r.Facility_Title__r.Name</formula>
    <label>NP/PA Facility Title</label>
    <type>Text</type>
</CustomField>