knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/NP_PA_Healthcare_Practitioner_Facility__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Healthcare_Practitioner_Facility__c</fullName>
    <label>NP/PA Healthcare Practitioner Facility</label>
    <referenceTo>HealthcarePractitionerFacility</referenceTo>
    <relationshipLabel>Collaborative Practice Agreements</relationshipLabel>
    <relationshipName>Collaborative_Practice_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>