knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/NP_PA_Regulatory_Temp_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>NP_PA_Regulatory_Temp_Inactive_Reason__c</fullName>
    <label>NP/PA Regulatory Temp Inactive Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement in Renewal</fullName>
            </value>
            <value>
                <fullName>Approved Supervisor, not an SG Physician</fullName>
            </value>
            <value>
                <fullName>No active collaborating physician</fullName>
            </value>
            <value>
                <fullName>No active primary superv/delegating phys</fullName>
            </value>
            <value>
                <fullName>Phys Exceeded Superv/Collab Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>