knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Physician_Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Physician_Healthcare_Facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Physician Healthcare Facility</label>
    <referenceTo>HealthcarePractitionerFacility</referenceTo>
    <relationshipLabel>Collaborative Practice Agreements</relationshipLabel>
    <relationshipName>Collaborative_Practice_Agreements1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>