knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Received_from_NP_PA__c.field-meta.xml
<CustomField>
    <fullName>Received_from_NP_PA__c</fullName>
    <label>Received from NP/PA</label>
    <type>Date</type>
</CustomField>