knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Received_from_Superv_Collab__c.field-meta.xml
<CustomField>
    <fullName>Received_from_Superv_Collab__c</fullName>
    <label>Received from Superv/Collab</label>
    <type>Date</type>
</CustomField>