knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Request_sent_to_Board_to_Delink__c.field-meta.xml
<CustomField>
    <fullName>Request_sent_to_Board_to_Delink__c</fullName>
    <label>Request sent to Board to Delink</label>
    <type>Date</type>
</CustomField>