knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Sent_to_Medical_Board__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Medical_Board__c</fullName>
    <label>Sent to Medical Board</label>
    <type>Date</type>
</CustomField>