knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Sent_to_Superv_Collab__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Superv_Collab__c</fullName>
    <label>Sent to Superv/Collab</label>
    <type>Date</type>
</CustomField>