knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Supervision_Collaboration_Status__c.field-meta.xml
<CustomField>
    <fullName>Supervision_Collaboration_Status__c</fullName>
    <label>Supervision/Collaboration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Superv Phys/INA@ this account</fullName>
            </value>
            <value>
                <fullName>Clinician is Unresponsive</fullName>
            </value>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Compliant, Supervisor Threshold Met</fullName>
            </value>
            <value>
                <fullName>Compliant – Not Working</fullName>
            </value>
            <value>
                <fullName>Compliant – Upcoming Account Termination</fullName>
            </value>
            <value>
                <fullName>Compliant – Upcoming Physician Termination</fullName>
            </value>
            <value>
                <fullName>Inactivation (delink) Pending</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Not Compliant</fullName>
            </value>
            <value>
                <fullName>Not Compliant – Not Working</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Not Required Immediately</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Supervising Phys #</fullName>
            </value>
            <value>
                <fullName>Pending with Alternate/Backup Physician</fullName>
            </value>
            <value>
                <fullName>Pending with Medical Board</fullName>
            </value>
            <value>
                <fullName>Pending with Notary Public</fullName>
            </value>
            <value>
                <fullName>Pending with NP/PA</fullName>
            </value>
            <value>
                <fullName>Pending with Nursing Board</fullName>
            </value>
            <value>
                <fullName>Pending with SG for board submission</fullName>
            </value>
            <value>
                <fullName>Pending with Superv/Collab Physician</fullName>
            </value>
            <value>
                <fullName>Physician as Midlevel-Not supervising</fullName>
            </value>
            <value>
                <fullName>Physician Not Eligible to Supervise</fullName>
            </value>
            <value>
                <fullName>Refuses to Supervise/Collaborate</fullName>
            </value>
            <value>
                <fullName>Temporarily Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>