knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/fields/Supervision_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Supervision_Requirement__c</fullName>
    <label>Supervision Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Direct Supervision</fullName>
            </value>
            <value>
                <fullName>Remote Supervision</fullName>
            </value>
            <value>
                <fullName>Onsite Supervision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>