knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Collaborative_Practice_Agreement__c/validationRules/AccountIds_In_HPFs_Must_Be_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountIds_In_HPFs_Must_Be_Same</fullName>
    <active>true</active>
    <errorConditionFormula>NP_PA_Healthcare_Practitioner_Facility__r.AccountId  &lt;&gt;  Physician_Healthcare_Facility__r.AccountId</errorConditionFormula>
    <errorMessage>CPA Account Association mismatch. Make sure the MD/DO and NP/PA association is make with the Clinician(s) working for the Facility (Service Account)</errorMessage>
</ValidationRule>